Update mesos chef deployment konfiguration